[package]
name = "pollpush"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.23.1"
reqwest = { version = "0.12.7", features = ["json"], default-features = false}
serde_json = "1.0"
warp = "0.3.7"
log = "0.4.22"
env_logger = "0.11.5"
serde = {version = "1.0.209", features = ["derive"]}
chrono = "0.4.38"
rand = "0.8.5"
futures-util = "0.3.30"
tokio-test = "0.4"
mockall = "0.13.0"